[gd_scene load_steps=13 format=3 uid="uid://c55cwuqj7ofxd"]

[ext_resource type="Script" path="res://src/Actors/Enemies/Enemy.gd" id="1_su7ia"]
[ext_resource type="Texture2D" uid="uid://hp2dtncnhrp5" path="res://src/Sprites/Enemy_Beetle.png" id="2_3casd"]
[ext_resource type="Shader" path="res://src/Shaders/passthrough.gdshader" id="2_wkjvm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u60ad"]
size = Vector2(17.5, 8.94738)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_evq8g"]
shader = ExtResource("2_wkjvm")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r0twr"]
size = Vector2(21.3044, 7.80853)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fkaph"]
size = Vector2(10.2273, 5.79711)

[sub_resource type="Animation" id="Animation_i1uf8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Enemy:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Enemy:skew")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Enemy:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -13.25)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Enemy:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/StompDetector/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body/BulletDetector/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_a6gyq"]
resource_name = "shot_pop"
length = 0.5
step = 0.02
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Enemy:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04, 0.1, 0.12),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -13.25), Vector2(0, -16), Vector2(0, -4), Vector2(0, -2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Enemy:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.04),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.7, 0.7)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Enemy:skew")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.04, 0.1, 0.12),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.329867, -0.731293, -1.22697]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/Enemy:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.04, 0.1, 0.12),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.755728, -3.3074, -3.68614]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body/StompDetector/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Body/BulletDetector/CollisionShape2D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_w1oyl"]
resource_name = "squish"
length = 0.5
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Enemy:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.09, 0.18),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.6), Vector2(1, 0.3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Enemy:skew")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.09, 0.18),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.401426, -1.13272]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Enemy:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.06, 0.18),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -13.25), Vector2(0, -16), Vector2(0, -4)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/Enemy:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.18),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.378736]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body/StompDetector/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Body/BulletDetector/CollisionShape2D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qxud0"]
_data = {
"RESET": SubResource("Animation_i1uf8"),
"shot_pop": SubResource("Animation_a6gyq"),
"squish": SubResource("Animation_w1oyl")
}

[sub_resource type="LabelSettings" id="LabelSettings_jceyq"]

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
scale = Vector2(0.8, 0.8)
collision_layer = 2
collision_mask = 73
script = ExtResource("1_su7ia")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8.5)
scale = Vector2(1.89999, 1.9)
shape = SubResource("RectangleShape2D_u60ad")

[node name="Body" type="Node2D" parent="."]

[node name="Enemy" type="Sprite2D" parent="Body"]
texture_filter = 1
material = SubResource("ShaderMaterial_evq8g")
position = Vector2(0, -13.25)
texture = ExtResource("2_3casd")

[node name="StompDetector" type="Area2D" parent="Body"]
modulate = Color(0, 0.207843, 1, 1)
position = Vector2(0, -17.5)
scale = Vector2(2.11, 1)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/StompDetector"]
position = Vector2(0, -3.75)
scale = Vector2(1.30912, 1.07215)
shape = SubResource("RectangleShape2D_r0twr")

[node name="BulletDetector" type="Area2D" parent="Body"]
position = Vector2(0, -13.25)
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/BulletDetector"]
modulate = Color(0, 1, 0, 1)
position = Vector2(2.68221e-06, -0.499999)
scale = Vector2(4.39999, 3.44999)
shape = SubResource("RectangleShape2D_fkaph")

[node name="TurnDetector" type="Area2D" parent="Body"]
modulate = Color(0, 0.207843, 1, 1)
position = Vector2(0, -17.5)
scale = Vector2(2.11, 1)
collision_layer = 2
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/TurnDetector"]
position = Vector2(-5.12007e-07, 2.3416)
scale = Vector2(1.00106, 1.00106)
shape = SubResource("RectangleShape2D_r0twr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qxud0")
}

[node name="DebugLabel" type="Label" parent="."]
offset_left = -20.0
offset_top = -85.0
offset_right = 20.0
offset_bottom = -59.0
text = "Test"
label_settings = SubResource("LabelSettings_jceyq")

[node name="LeaveCounterDebugLabel" type="Label" parent="."]
offset_left = -18.75
offset_top = -53.75
offset_right = 21.25
offset_bottom = -27.75
text = "n"
label_settings = SubResource("LabelSettings_jceyq")

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="body_entered" from="Body/StompDetector" to="." method="_on_stomp_detecter_body_entered"]
[connection signal="area_entered" from="Body/BulletDetector" to="." method="_on_bullet_detector_area_entered"]
[connection signal="body_entered" from="Body/TurnDetector" to="." method="_on_turn_detecter_body_entered"]
